--- a/html_advanced/25-index.html
+++ b/html_advanced/25-index.html
@@ -173,7 +173,7 @@
             <div>
                 <ul>
                     <li><a href="#">Terms of Use</a></li>
-                    <li><a href="#">Private Policy</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
                     <li><a href="#">Cookie Policy</a></li>
                 </ul>
             </div>
